# HOPEFX-AI-TRADING

./: .codacy.yml  .env.example  .gitignore  .pre-commit-config.yaml  =1.2.5  =3.0.0  COMPETITIVE_ANALYSIS.md  CONTRIBUTING.md  DEBUGGING.md  DEPLOYMENT.md  Dockerfile  FINAL_STATUS.md  INSTALLATION.md  LICENSE  README.md  SECURITY.md  __init__.py  app.py  cli.py  docker-compose.yml  fix_code_quality.py  hopefx-trading.service  hopefx.db  main.py  pyproject.toml  pytest.ini  requirements-optional.txt  requirements.txt  setup.py
.github/: copilot-instructions.md
.github/workflows/: codacy.yml  codeql.yml  fortify.yml  tests.yml
analysis/: __init__.py  market_analysis.py  market_scanner.py  order_flow.py
analytics/: __init__.py  options.py  performance.py  portfolio.py  risk.py  simulations.py
api/: __init__.py  admin.py  monetization.py  signals.py  trading.py  websocket_server.py
backtesting/: __init__.py  data_handler.py  data_sources.py  engine.py  events.py  execution.py  metrics.py  optimizer.py  plots.py  portfolio.py  reports.py  walk_forward.py
brokers/: __init__.py  advanced_orders.py  alpaca.py  base.py  binance.py  factory.py  interactive_brokers.py  mt5.py  oanda.py  paper_trading.py
cache/: __init__.py  market_data_cache.py
charting/: __init__.py  chart_engine.py  drawing_tools.py  indicators.py  templates.py  timeframes.py
config/: __init__.py  config.development.json  config_manager.py
data/: __init__.py  depth_of_market.py
database/: __init__.py  models.py
docs/: API_GUIDE.md  ASSET_DIVERSIFICATION.md  COMMUNITY.md  FAQ.md  MOBILE_GUIDE.md  MONETIZATION.md  SAMPLE_STRATEGIES.md  VIDEO_TUTORIALS.md  WORLD_MONITOR_INTEGRATION.md
examples/: backtest_example.py
ml/: __init__.py
mobile/: __init__.py  analytics.py  api.py  auth.py  push_notifications.py  trading.py
monetization/: __init__.py  access_codes.py  affiliate.py  analytics.py  commission.py  enterprise.py  invoices.py  license.py  marketplace.py  payment_processor.py  pricing.py  stripe_integration.py  subscription.py
news/: __init__.py  economic_calendar.py  geopolitical_risk.py  impact_predictor.py  providers.py  sentiment.py
notifications/: __init__.py  alert_engine.py  manager.py
payments/: __init__.py  compliance.py  payment_gateway.py  security.py  transaction_manager.py  wallet.py
risk/: __init__.py  advanced_analytics.py  manager.py
social/: __init__.py  copy_trading.py  leaderboards.py  marketplace.py  performance.py  profiles.py
strategies/: __init__.py  base.py  bollinger_bands.py  breakout.py  ema_crossover.py  its_8_os.py  ma_crossover.py  macd_strategy.py  manager.py  mean_reversion.py  rsi_strategy.py  smc_ict.py  stochastic.py  strategy_brain.py
templates/: base.html  paper_trading.html  pricing.html
tests/: conftest.py
utils/: __init__.py  component_status.py  security.py
(+51 files in other folders)
